--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             <div class="splide__track">
                 <ul class="splide__list">
                     <li class="splide__slide">
-                        <div class="container">
-                            <div id="main"></div> 
-                            <div id="sidebar"></div>
-                            <div id="content1"></div>
-                          </div>
+                        <div class="slide__container">
+                            <div class="slide__left" style="background-image: url(imgs/kaiimg1.jpg);"></div> 
+                            <div class="slide__right-up" style="background-image: url(imgs/kaiimg3.jpg);"></div>
+                            <div class="slide__right-down" style="background-image: url(imgs/kaiimg2.jpg);"></div>
+                        </div>
                     </li>
                 </ul>
             </div>
