add single image slide

--- a/index.html
+++ b/index.html
@@ -8,15 +8,30 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="slide__container--one-image"></div>
+                            <div class="slide__single" style="background-image: url(imgs/helsinki/97-08-26-02BildPavillion.jpg);"></div>
+                        </div>
     <main>
         <div class="splide">
             <div class="splide__track">
                 <ul class="splide__list">
                     <li class="splide__slide">
                         <div class="slide__container">
-                            <div class="slide__left" style="background-image: url(imgs/kaiimg1.jpg);"></div> 
-                            <div class="slide__right-up" style="background-image: url(imgs/kaiimg3.jpg);"></div>
-                            <div class="slide__right-down" style="background-image: url(imgs/kaiimg2.jpg);"></div>
+                            <div class="slide__single" style="background-image: url(imgs/helsinki/97-08-26-02BildPavillion.jpg);"></div>
+                        </div>
+                    </li>
+                    <li class="splide__slide">
+                        <div class="slide__container slide__grid">
+                            <div class="slide__left" style="background-image: url(imgs/peltoniemi/peltoniemi_1.jpg);"></div> 
+                            <div class="slide__right-up" style="background-image: url(imgs/peltoniemi/peltoniemi_3.jpg);"></div>
+                            <div class="slide__right-down" style="background-image: url(imgs/peltoniemi/peltoniemi_2.jpg);"></div>
+                        </div>
+                    </li>
+                    <li class="splide__slide">
+                        <div class="slide__container slide__grid">
+                            <div class="slide__left" style="background-image: url(imgs/peltoniemi/peltoniemi_1.jpg);"></div> 
+                            <div class="slide__right-up" style="background-image: url(imgs/peltoniemi/peltoniemi_3.jpg);"></div>
+                            <div class="slide__right-down" style="background-image: url(imgs/peltoniemi/peltoniemi_2.jpg);"></div>
                         </div>
                     </li>
                 </ul>
