--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="slide__container--one-image"></div>
-                            <div class="slide__single" style="background-image: url(imgs/helsinki/97-08-26-02BildPavillion.jpg);"></div>
-                        </div>
     <main>
         <div class="splide">
             <div class="splide__track">
@@ -37,6 +34,91 @@
                 </ul>
             </div>
         </div>  
+
+        <div class="projectgrid">
+            <div class="project" style="background-image: url(imgs/peltoniemi/peltoniemi_preview2.jpg)"> 
+                <div class="projectinfo"></div>
+                <div class="projecttext">Peltoniemi</div>
+            </div>
+            <div class="project" style="background-image: url(imgs/helsinki/helsinki-preview.jpg);">
+                <div class="projectinfo"></div>
+                <div class="projecttext">Helsinki</div>
+            </div>
+        <div class="projectgrid">
+            <div class="project" style="background-image: url(imgs/peltoniemi/peltoniemi_preview2.jpg)"> 
+                <div class="projectinfo"></div>
+                <div class="projecttext">Peltoniemi</div>
+            </div>
+            <div class="project" style="background-image: url(imgs/helsinki/helsinki-preview.jpg);">
+                <div class="projectinfo"></div>
+                <div class="projecttext">Helsinki</div>
+            </div>
+        <div class="projectgrid">
+            <div class="project" style="background-image: url(imgs/peltoniemi/peltoniemi_preview2.jpg)"> 
+                <div class="projectinfo"></div>
+                <div class="projecttext">Peltoniemi</div>
+            </div>
+            <div class="project" style="background-image: url(imgs/helsinki/helsinki-preview.jpg);">
+                <div class="projectinfo"></div>
+                <div class="projecttext">Helsinki</div>
+            </div>
+        <div class="projectgrid">
+            <div class="project" style="background-image: url(imgs/peltoniemi/peltoniemi_preview2.jpg)"> 
+                <div class="projectinfo"></div>
+                <div class="projecttext">Peltoniemi</div>
+            </div>
+            <div class="project" style="background-image: url(imgs/helsinki/helsinki-preview.jpg);">
+                <div class="projectinfo"></div>
+                <div class="projecttext">Helsinki</div>
+            </div>
+        <div class="projectgrid">
+            <div class="project" style="background-image: url(imgs/peltoniemi/peltoniemi_preview2.jpg)"> 
+                <div class="projectinfo"></div>
+                <div class="projecttext">Peltoniemi</div>
+            </div>
+            <div class="project" style="background-image: url(imgs/helsinki/helsinki-preview.jpg);">
+                <div class="projectinfo"></div>
+                <div class="projecttext">Helsinki</div>
+            </div>
+        <div class="projectgrid">
+            <div class="project" style="background-image: url(imgs/peltoniemi/peltoniemi_preview2.jpg)"> 
+                <div class="projectinfo"></div>
+                <div class="projecttext">Peltoniemi</div>
+            </div>
+            <div class="project" style="background-image: url(imgs/helsinki/helsinki-preview.jpg);">
+                <div class="projectinfo"></div>
+                <div class="projecttext">Helsinki</div>
+            </div>
+        <div class="projectgrid">
+            <div class="project" style="background-image: url(imgs/peltoniemi/peltoniemi_preview2.jpg)"> 
+                <div class="projectinfo"></div>
+                <div class="projecttext">Peltoniemi</div>
+            </div>
+            <div class="project" style="background-image: url(imgs/helsinki/helsinki-preview.jpg);">
+                <div class="projectinfo"></div>
+                <div class="projecttext">Helsinki</div>
+            </div>
+        <div class="projectgrid">
+            <div class="project" style="background-image: url(imgs/peltoniemi/peltoniemi_preview2.jpg)"> 
+                <div class="projectinfo"></div>
+                <div class="projecttext">Peltoniemi</div>
+            </div>
+            <div class="project" style="background-image: url(imgs/helsinki/helsinki-preview.jpg);">
+                <div class="projectinfo"></div>
+                <div class="projecttext">Helsinki</div>
+            </div>
+        <div class="projectgrid">
+            <div class="project" style="background-image: url(imgs/peltoniemi/peltoniemi_preview2.jpg)"> 
+                <div class="projectinfo"></div>
+                <div class="projecttext">Peltoniemi</div>
+            </div>
+            <div class="project" style="background-image: url(imgs/helsinki/helsinki-preview.jpg);">
+                <div class="projectinfo"></div>
+                <div class="projecttext">Helsinki</div>
+            </div>
+
+
+        </div>
     </main>
     
 </body>
