--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <div class="projectgrid">
             <div class="project" style="background-image: url(imgs/peltoniemi/peltoniemi_preview2.jpg)"> 
-                <div class="projectinfo"></div>
+                <a class="projectinfo" href="indexUnter/unter.html"></a>
                 <div class="projecttext">Peltoniemi</div>
             </div>
             <div class="project" style="background-image: url(imgs/helsinki/helsinki-preview.jpg);">
