--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         </div>  
 
         <div class="projectgrid">
-            <div class="project" style="background-image: url(imgs/peltoniemi/peltoniemi_preview2.jpg)"> 
-                <a class="projectinfo" href="indexUnter/unter.html"></a>
-                <div class="projecttext">Peltoniemi</div>
+            <div class="project" style="background-image: url(../kartaeuserhof/imgs/04Nachher/Nachher3.jpg)"> 
+                <a class="projectinfo" href="kartaeuserhof/index.html"></a>
+                <div class="projecttext">Kartäuserhof</div>
             </div>
             <div class="project" onclick="" style="background-image: url(imgs/helsinki/helsinki-preview.jpg);">
                 <div class="projectinfo"></div>
