--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
     <link rel="stylesheet" href="css/themes/splide-skyblue.min.css">
     <link rel="stylesheet" href="styles.css">
 <head>
@@ -9,7 +9,16 @@
 </head>
 <body>
     <main>
-        <header></header>
+        <header>
+            <div class="logo-line"></div>
+            <a href="index.html">
+                <img class="header-text" src="imgs/Kai-Matzak-Schrift.svg" alt="Kai-Matzak-Schrift">
+            </a>
+            <a href="index.html"> 
+                <img class="logo" src="imgs/Kai-Matzak-Logo.svg" alt="Kai-Matzak-Logo">
+            </a>
+            
+        </header>
         <div class="splide">
             <div class="splide__track">
                 <ul class="splide__list">
