--- a/kartaeuserhof/index.html
+++ b/kartaeuserhof/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,8 +10,19 @@
 <body>
     <main>
         <header>
-
+            <div class="logo-line"></div>
+            <a href="../index.html">
+                <img class="header-text" src="../imgs/Kai-Matzak-Schrift.svg" alt="Kai-Matzak-Schrift">
+            </a>
+            <a href="../index.html"> 
+                <img class="logo" src="../imgs/Kai-Matzak-Logo.svg" alt="Kai-Matzak-Logo">
+            </a>
+            
         </header>
+        <a class="timestamps" href="vor-dem-umbau.html">Vor dem Umbau</a>
+        <a class="timestamps" href="planung.html">Planung</a>
+        <a class="timestamps" href="umbau.html">Umbau</a>
+        <a class="timestamps" href="index.html">Nach dem Umbau</a>
         <div class="slide__container slide__grid">
             <div class="slide__left" style="background-image: url(../kartaeuserhof/imgs/01Vorher/Vorher.jpg);"></div> 
             <div class="slide__right-up" style="background-image: url(../kartaeuserhof/imgs/03Umbau/Umbau.jpg);"></div>
