--- a/kartaeuserhof/index.html
+++ b/kartaeuserhof/index.html
@@ -17,12 +17,15 @@
             <a href="../index.html"> 
                 <img class="logo" src="../imgs/Kai-Matzak-Logo.svg" alt="Kai-Matzak-Logo">
             </a>
-            
+            <div class="site-info">Kartäuserhof 19, Köln</div>
+            <nav>
+            <a href="vor-dem-umbau.html">Vorher</a>
+            <a href="planung.html">Planung</a>
+            <a href="umbau.html">Umbau</a>
+            <a class="active" href="index.html">Nachher</a>
+            </nav>
         </header>
-        <a class="timestamps" href="vor-dem-umbau.html">Vor dem Umbau</a>
-        <a class="timestamps" href="planung.html">Planung</a>
-        <a class="timestamps" href="umbau.html">Umbau</a>
-        <a class="timestamps" href="index.html">Nach dem Umbau</a>
+        
         <div class="slide__container slide__grid">
             <div class="slide__left" style="background-image: url(../kartaeuserhof/imgs/01Vorher/Vorher.jpg);"></div> 
             <div class="slide__right-up" style="background-image: url(../kartaeuserhof/imgs/03Umbau/Umbau.jpg);"></div>
