--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <header>
+        <header class="has-no-navigation">
             <div class="logo-line"></div>
             <a href="index.html">
                 <img class="header-text" src="imgs/Kai-Matzak-Schrift.svg" alt="Kai-Matzak-Schrift">
