use php for referenzen

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <div class="projectgrid">
             <div class="project" style="background-image: url(../kartaeuserhof/imgs/04Nachher/Nachher3.jpg)"> 
-                <a class="projectinfo" href="kartaeuserhof/index.html"></a>
+                <a class="projectinfo" href="kartaeuserhof/index.php"></a>
                 <div class="projecttext">Kartäuserhof</div>
             </div>
             <div class="project" onclick="" style="background-image: url(imgs/helsinki/helsinki-preview.jpg);">
@@ -112,6 +112,9 @@
             </div>
         </div>
     </main>
+    <footer>
+        
+    </footer>
     
 </body>
 <script src="js/splide.min.js"></script>
