--- a/index.html
+++ b/index.html
@@ -23,24 +23,24 @@
             <div class="splide__track">
                 <ul class="splide__list">
                     <li class="splide__slide">
-                        <div class="slide__container">
-                            <div class="slide__single" style="background-image: url(imgs/helsinki/97-08-26-02BildPavillion.jpg);"></div>
-                        </div>
+                       <img src="slider/imgs/01BildPavillionHelsinki.jpg" alt="">
                     </li>
                     <li class="splide__slide">
-                        <div class="slide__container slide__grid">
-                            <div class="slide__left" style="background-image: url(imgs/peltoniemi/peltoniemi_1.jpg);"></div> 
-                            <div class="slide__right-up" style="background-image: url(imgs/peltoniemi/peltoniemi_3.jpg);"></div>
-                            <div class="slide__right-down" style="background-image: url(imgs/peltoniemi/peltoniemi_2.jpg);"></div>
-                        </div>
+                       <img src="slider/imgs/02KriemhildNachher.JPG" alt="">
                     </li>
                     <li class="splide__slide">
-                        <div class="slide__container slide__grid">
-                            <div class="slide__left" style="background-image: url(imgs/peltoniemi/peltoniemi_1.jpg);"></div> 
-                            <div class="slide__right-up" style="background-image: url(imgs/peltoniemi/peltoniemi_3.jpg);"></div>
-                            <div class="slide__right-down" style="background-image: url(imgs/peltoniemi/peltoniemi_2.jpg);"></div>
-                        </div>
+                       <img src="slider/imgs/03GebautChile.JPG" alt="">
                     </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/04SuerthNachher.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/05EngelbertGebaut.jpg" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/06RondorfNachher.jpg" alt="">
+                    </li>
+                    
                 </ul>
             </div>
         </div>  
