--- a/index.html
+++ b/index.html
@@ -40,10 +40,184 @@
                     <li class="splide__slide">
                        <img src="slider/imgs/06RondorfNachher.jpg" alt="">
                     </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/07K19Nachher.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/08BildPavillion.jpg" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/09KriemhildNachher.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/10GebautChile.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/11SuerthNachher.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/12LongerichNachher.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/13PavillionHelsinki.jpg" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/14KriemhildNachher.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/15GebautChile.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/16EngelbertGebaut.jpg" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/17SuerthNachher.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/18K19Umbau.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/19SushiBar.jpg" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/20K19-3Nachher.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/21BildPavillionHelsinki.jpg" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/22EngelbertGebaut.jpg" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/23GebautChile.jpg" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/24SuerthNachher.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/25K19-3Nachher.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/26WiddersdorfNachher.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/27EngelbertGebaut.jpg" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/28BadGodesbergTitelbild.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/29K19Nachher.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/30Severin.jpg" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/31K19-3Nachher.jpg" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/32GebautChile.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/33SuerthNachher.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/34GLNachher.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/35K19Umbau.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/36K19-3Nachher.jpg" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/37MuengersdorfNachher.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/38KoethelGebaut.jpg" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/39K19-3Nachher.jpg" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/40KriemhildNachher.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/41GebautChile.jpg" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/42BildSeverin13.jpg" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/43EngelbertGebaut.jpg" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/44PorzNachher.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/45K19-3Nachher.jpg" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/46SuerthNachher.jpg" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/47RondorfNachher.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/48WiddersdorfNachher.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/49SuerthNachher.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/50GebautChile.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/51LongerichNachher.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/52DeutzNachher.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/53SuerthNachher.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/54PorzNachher.jpg" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/55K19Umbau.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/56K19Umbau.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/57Nachher.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/58WiddersdorfNachher.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/59GebautChile.JPG" alt="">
+                    </li>
+                    <li class="splide__slide">
+                       <img src="slider/imgs/60K19-3Nachher.jpg" alt="">
+                    </li>
                     
                 </ul>
             </div>
         </div>  
+        <div class="text__grid">
+            <div><strong>Übersichtlichkeit:</strong><br>
+                Umfassende Aufklärung und Beratung vom ersten Vorgespräch bis zur Nachbetreuung für das geplante Bauvorhaben.
+                </div>
+            <div><strong> Gebäude wird virtuell erlebbar:</strong><br>
+                Photorealistische Darstellung und Filmvisualisierung als sichere Entscheidungsgrundlage und als Präsentationsmedium.</div>
+            <div><strong>Im Kosten-
+                und Terminmanagement:</strong><br> 
+                Frühe Integration aller Kostenfaktoren in die Entwurfsplanung für ein Optimum an Architekturqualität und Funktionalität im Rahmen der verfügbaren Mittel.</div>
+            <div><strong> "Baugeschichtsaufgaben":</strong><br>
+                Umbau und Erweiterung von bestehender Substanz für gegenwärtige Nutzungen und Ansprüche.</div>
+        </div>
 
         <div class="projectgrid">
             <div class="project" style="background-image: url(../kartaeuserhof/imgs/04Nachher/Nachher3.jpg)"> 
