--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <div class="projectgrid">
             <div class="project" style="background-image: url(../kartaeuserhof/imgs/04Nachher/Nachher3.jpg)"> 
                 <a class="projectinfo" href="kartaeuserhof/index.php"></a>
-                <div class="projecttext">Kartäuserhof</div>
+                <div class="projecttext">2006<br>Kartäuserhof 19<br>Köln</div>
             </div>
             <div class="project" onclick="" style="background-image: url(imgs/helsinki/helsinki-preview.jpg);">
                 <div class="projectinfo"></div>
@@ -287,8 +287,25 @@
         </div>
     </main>
     <footer>
-        
-    </footer>
+      <div class="footer-container">
+          <div></div>
+          <div class="footer-links">
+              <a href="#">Impressum</a>
+              <a href="#">Datenschutz</a>
+              <a href="#">Energiepass</a>
+          </div>
+          <div class="contactinfo"><strong>Kai Matzak</strong><br>
+  Freier Architekt<br>
+  Diplom Ingenieur AKNW<br>
+  Master of Architecture<br><br>
+  Kartäuserhof 19<br>
+  D- 50678 Köln<br><br>
+  Tel: 0221 / 2616845<br>
+  Fax: 0221 / 9916778<br><br>
+  E-mail: <a href="mailto:architektur@kai-matzak.de">architektur@kai-matzak.de</a>
+          </div>
+      </div>
+  </footer>
     
 </body>
 <script src="js/splide.min.js"></script>
