--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         </div>
 
         <div class="projectgrid">
-            <div class="project" style="background-image: url(../kartaeuserhof/imgs/04Nachher/Nachher3.jpg)"> 
+            <div class="project" style="background-image: url(../kartaeuserhof/imgs/04Nachher/05-01K19Nachher.JPG)"> 
                 <a class="projectinfo" href="kartaeuserhof/index.php"></a>
                 <div class="projecttext">2006<br>Kartäuserhof 19<br>Köln</div>
             </div>
