--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <div><strong>Übersichtlichkeit:</strong><br>
                 Umfassende Aufklärung und Beratung vom ersten Vorgespräch bis zur Nachbetreuung für das geplante Bauvorhaben.
                 </div>
-            <div><strong> Gebäude wird virtuell erlebbar:</strong><br>
+            <div><strong>Das Gebäude wird virtuell erlebbar:</strong><br>
                 Photorealistische Darstellung und Filmvisualisierung als sichere Entscheidungsgrundlage und als Präsentationsmedium.</div>
             <div><strong>Im Kosten-
                 und Terminmanagement:</strong><br> 
@@ -224,65 +224,9 @@
                 <a class="projectinfo" href="kartaeuserhof/index.php"></a>
                 <div class="projecttext">2006<br>Kartäuserhof 19<br>Köln</div>
             </div>
-            <div class="project" onclick="" style="background-image: url(imgs/helsinki/helsinki-preview.jpg);">
-                <div class="projectinfo"></div>
-                <div class="projecttext">Helsinki</div>
-            </div>
-            <div class="project" onclick="" style="background-image: url(imgs/peltoniemi/peltoniemi_preview2.jpg)"> 
-                <div class="projectinfo"></div>
-                <div class="projecttext">Peltoniemi</div>
-            </div>
-            <div class="project" onclick="" style="background-image: url(imgs/helsinki/helsinki-preview.jpg);">
-                <div class="projectinfo"></div>
-                <div class="projecttext">Helsinki</div>
-            </div>
-            <div class="project" onclick="" style="background-image: url(imgs/peltoniemi/peltoniemi_preview2.jpg)"> 
-                <div class="projectinfo"></div>
-                <div class="projecttext">Peltoniemi</div>
-            </div>
-            <div class="project" onclick="" style="background-image: url(imgs/helsinki/helsinki-preview.jpg);">
-                <div class="projectinfo"></div>
-                <div class="projecttext">Helsinki</div>
-            </div>
-            <div class="project" onclick="" style="background-image: url(imgs/peltoniemi/peltoniemi_preview2.jpg)"> 
-                <div class="projectinfo"></div>
-                <div class="projecttext">Peltoniemi</div>
-            </div>
-            <div class="project" onclick="" style="background-image: url(imgs/helsinki/helsinki-preview.jpg);">
-                <div class="projectinfo"></div>
-                <div class="projecttext">Helsinki</div>
-            </div>
-            <div class="project" onclick="" style="background-image: url(imgs/peltoniemi/peltoniemi_preview2.jpg)"> 
-                <div class="projectinfo"></div>
-                <div class="projecttext">Peltoniemi</div>
-            </div>
-            <div class="project" onclick="" style="background-image: url(imgs/helsinki/helsinki-preview.jpg);">
-                <div class="projectinfo"></div>
-                <div class="projecttext">Helsinki</div>
-            </div>
-            <div class="project" onclick="" style="background-image: url(imgs/peltoniemi/peltoniemi_preview2.jpg)"> 
-                <div class="projectinfo"></div>
-                <div class="projecttext">Peltoniemi</div>
-            </div>
-            <div class="project" onclick="" style="background-image: url(imgs/helsinki/helsinki-preview.jpg);">
-                <div class="projectinfo"></div>
-                <div class="projecttext">Helsinki</div>
-            </div>
-            <div class="project" onclick="" style="background-image: url(imgs/peltoniemi/peltoniemi_preview2.jpg)"> 
-                <div class="projectinfo"></div>
-                <div class="projecttext">Peltoniemi</div>
-            </div>
-            <div class="project" onclick="" style="background-image: url(imgs/helsinki/helsinki-preview.jpg);">
-                <div class="projectinfo"></div>
-                <div class="projecttext">Helsinki</div>
-            </div>
-            <div class="project" onclick="" style="background-image: url(imgs/peltoniemi/peltoniemi_preview2.jpg)"> 
-                <div class="projectinfo"></div>
-                <div class="projecttext">Peltoniemi</div>
-            </div>
-            <div class="project" onclick="" style="background-image: url(imgs/helsinki/helsinki-preview.jpg);">
-                <div class="projectinfo"></div>
-                <div class="projecttext">Helsinki</div>
+            <div class="project" onclick="" style="background-image: url(ahrweiler/imgs/20-08Ahrweiler-teaser.jpg);">
+                <a class="projectinfo" href="ahrweiler/umbau.php"></a>
+                <div class="projecttext">2020<br>Bad Neuenahr-Ahrweiler</div>
             </div>
         </div>
     </main>
