--- a/index.html
+++ b/index.html
@@ -228,6 +228,18 @@
                 <a class="projectinfo" href="ahrweiler/umbau.php"></a>
                 <div class="projecttext">2020<br>Bad Neuenahr-Ahrweiler</div>
             </div>
+            <div class="project" onclick="" style="background-image: url(bonn-oberkassel/imgs/2019Bonn-teaser.jpg);">
+                <a class="projectinfo" href="bonn-oberkassel/index.php"></a>
+                <div class="projecttext">2019<br>Bonn Oberkassel</div>
+            </div>
+            <div class="project" onclick="" style="background-image: url(südstadt-kindergarten/imgs/2018Kindergarten-teaser.jpg);">
+                <a class="projectinfo" href="südstadt-kindergarten/vorher.php"></a>
+                <div class="projecttext">2018-2019<br>Köln Südstadt</div>
+            </div>
+            <div class="project" onclick="" style="background-image: url(rondorf/imgs/2017RondorfTitelbild.jpg);">
+                <a class="projectinfo" href="rondorf/index.php"></a>
+                <div class="projecttext">2017<br>Köln Rondorf</div>
+            </div>
         </div>
     </main>
     <footer>
