--- a/index.html
+++ b/index.html
@@ -19,6 +19,22 @@
             </a>
             
         </header>
+
+         <div class="kontakt__container kontakt__container--home">
+            <div class="kontakt__slide-container">
+               <div class="kontakt__text"><div class="kontakt__text-inner">KONTAKT</div></div>
+               <div class="kontakt__info">Freier Architekt<br>
+                  Kai Matzak<br>
+                  Diplom Ingenieur AKNW<br>
+                  Master of Architecture<br><br>
+                  Kartäuserhof 19<br>
+                  D- 50678 Köln<br><br>
+                  Tel: 0221 / 2616845<br>
+                  Fax: 0221 / 9916778<br><br>
+                  <a href="mailto:architektur@kai-matzak.de">architektur@kai-matzak.de</a></div>
+            </div>
+         </div>
+
         <div class="splide">
             <div class="splide__track">
                 <ul class="splide__list">
