--- a/impressum.html
+++ b/impressum.html
@@ -57,6 +57,7 @@
             Haftungshinweis: Trotz sorgf&auml;ltiger inhaltlicher Kontrolle &uuml;bernehmen wir<br />
             keine Haftung f&uuml;r die Inhalte externer Links. F&uuml;r den Inhalt der verlinkten<br />
             Seiten sind ausschlie&szlig;lich deren Betreiber verantwortlich.<br /><br /></p>
+            <strong>Webentwicklung:</strong> Simon Schüßler
             <br>
             <br>
             <br>
