--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                 <a class="projectinfo" href="rondorf/index.php"></a>
                 <div class="projecttext">2017<br>Köln Rondorf</div>
             </div>
-            <div class="project" onclick="" style="background-image: url(suerth-neubau/imgs/2016Sürth-teaser.jpg);">
+            <div class="project" onclick="" style="background-image: url(suerth-neubau/imgs/2016Suerth-teaser.jpg);">
                <a class="projectinfo" href="suerth-neubau/index.php"></a>
                <div class="projecttext">2016<br>Köln Sürth</div>
             </div>
@@ -276,7 +276,7 @@
                <a class="projectinfo" href="bonn-badgodesberg/index.php"></a>
                <div class="projecttext">2015<br>Bonn Bad Godesberg</div>
             </div>
-            <div class="project" onclick="" style="background-image: url(muelheim/imgs/2014-09Mülheim-teaser.jpg);">
+            <div class="project" onclick="" style="background-image: url(muelheim/imgs/2014-09Muelheim-teaser.jpg);">
                <a class="projectinfo" href="muelheim/vorher.php"></a>
                <div class="projecttext">2014<br>Köln Mülheim</div>
             </div>
@@ -288,12 +288,12 @@
                <a class="projectinfo" href="widdersdorf/index.php"></a>
                <div class="projecttext">2014<br>Köln Widdersdorf</div>
             </div>
-            <div class="project" onclick="" style="background-image: url(schleswig-holstein/imgs/2013Köthel-teaser.jpg);">
+            <div class="project" onclick="" style="background-image: url(schleswig-holstein/imgs/2013Koethel-teaser.jpg);">
                <a class="projectinfo" href="schleswig-holstein/index.php"></a>
                <div class="projecttext">2013<br>Schleswig-Holstein, Köthel
                   Gästehaus</div>
             </div>            
-            <div class="project" onclick="" style="background-image: url(muengersdorf/imgs/2013Müngersdorf-teaser.jpg);">
+            <div class="project" onclick="" style="background-image: url(muengersdorf/imgs/2013Muengersdorf-teaser.jpg);">
                <a class="projectinfo" href="muengersdorf/index.php"></a>
                <div class="projecttext">2013<br>Köln Müngersdorf</div>
             </div>            
@@ -305,8 +305,8 @@
                <a class="projectinfo" href="porz/index.php"></a>
                <div class="projecttext">2012<br>Köln Porz</div>
             </div>            
-            <div class="project" onclick="" style="background-image: url(Pulheim/imgs/2011Pulheim-teaser.jpg);">
-               <a class="projectinfo" href="Pulheim/index.php"></a>
+            <div class="project" onclick="" style="background-image: url(pulheim/imgs/2011Pulheim-teaser.jpg);">
+               <a class="projectinfo" href="pulheim/index.php"></a>
                <div class="projecttext">2011<br>Pulheim</div>
             </div>            
             <div class="project" onclick="" style="background-image: url(bergisch-gladbach/imgs/2011GLT-teaser.jpg);">
