--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
          <div class="kontakt__container kontakt__container--home">
             <div class="kontakt__slide-container">
                <div class="kontakt__text"><div class="kontakt__text-inner">KONTAKT</div></div>
-               <div class="kontakt__info">Freier Architekt<br>
+               <div class="kontakt__info">
                   Kai Matzak<br>
+                  Freier Architekt<br>
                   Diplom Ingenieur AKNW<br>
                   Master of Architecture<br><br>
                   Kartäuserhof 19<br>
@@ -225,14 +226,17 @@
         <div class="text__grid">
             <div><strong>Übersichtlichkeit:</strong><br>
                 Umfassende Aufklärung und Beratung vom ersten Vorgespräch bis zur Nachbetreuung für das geplante Bauvorhaben.
+                <br>Einbindung der Bauherrenwünsche und des Raumprogramms in ein stimmiges Architekturkonzept.
                 </div>
             <div><strong>Das Gebäude wird virtuell erlebbar:</strong><br>
                 Photorealistische Darstellung und Filmvisualisierung als sichere Entscheidungsgrundlage und als Präsentationsmedium.</div>
             <div><strong>Im Kosten-
                 und Terminmanagement:</strong><br> 
                 Frühe Integration aller Kostenfaktoren in die Entwurfsplanung für ein Optimum an Architekturqualität und Funktionalität im Rahmen der verfügbaren Mittel.</div>
-            <div><strong> "Baugeschichtsaufgaben":</strong><br>
-                Umbau und Erweiterung von bestehender Substanz für gegenwärtige Nutzungen und Ansprüche.</div>
+            <div><strong>Schwerpunkt "Baugeschichtsaufgaben":</strong><br>
+                Umbau und Erweiterung von bestehender Substanz für gegenwärtige Nutzungen und Ansprüche.
+                <br>Freilegung und Restaurierung von historischen Details im Kontext von Modernisierungsmaßnahmen.
+               </div>
         </div>
 
         <div class="projectgrid">
@@ -357,15 +361,16 @@
               <a href="datenschutz.html">Datenschutz</a>
               <a href="energiepass.html">Energiepass</a>
           </div>
-          <div class="contactinfo"><strong>Kai Matzak</strong><br>
-  Freier Architekt<br>
-  Diplom Ingenieur AKNW<br>
-  Master of Architecture<br><br>
-  Kartäuserhof 19<br>
-  D- 50678 Köln<br><br>
-  Tel: 0221 / 2616845<br>
-  Fax: 0221 / 9916778<br><br>
-  E-mail: <a href="mailto:architektur@kai-matzak.de">architektur@kai-matzak.de</a>
+          <div class="contactinfo">
+             <strong>Kai Matzak</strong><br>
+               Freier Architekt<br>
+               Diplom Ingenieur AKNW<br>
+               Master of Architecture<br><br>
+               Kartäuserhof 19<br>
+               D- 50678 Köln<br><br>
+               Tel: 0221 / 2616845<br>
+               Fax: 0221 / 9916778<br><br>
+               E-mail: <a href="mailto:architektur@kai-matzak.de">architektur@kai-matzak.de</a>
           </div>
       </div>
   </footer>
