--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
                        <img src="slider/imgs/06RondorfNachher.jpg" alt="">
                     </li>
                     <li class="splide__slide">
+                       <img src="slider/imgs/unnamed.jpg" alt="">
+                    </li>
+                    <li class="splide__slide">
                        <img src="slider/imgs/07K19Nachher.JPG" alt="">
                     </li>
                     <li class="splide__slide">
