--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kai Matzak - Architekt - Köln</title>
 </head>
 <body>
     <main>
@@ -55,10 +55,10 @@
                        <img src="slider/imgs/05EngelbertGebaut.jpg" alt="">
                     </li>
                     <li class="splide__slide">
-                       <img src="slider/imgs/06RondorfNachher.jpg" alt="">
-                    </li>
+                     <img src="slider/imgs/unnamed.jpg" alt="">
+                  </li>
                     <li class="splide__slide">
-                       <img src="slider/imgs/unnamed.jpg" alt="">
+                       <img src="slider/imgs/06RondorfNachher.jpg" alt="">
                     </li>
                     <li class="splide__slide">
                        <img src="slider/imgs/07K19Nachher.JPG" alt="">
@@ -229,24 +229,20 @@
         <div class="text__grid">
             <div><strong>Übersichtlichkeit:</strong><br>
                 Umfassende Aufklärung und Beratung vom ersten Vorgespräch bis zur Nachbetreuung für das geplante Bauvorhaben.
-                <br>Einbindung der Bauherrenwünsche und des Raumprogramms in ein stimmiges Architekturkonzept.
+                <br>Einbindung der Bauherren&shy;wünsche und des Raumprogramms in ein stimmiges Architekturkonzept.
                 </div>
             <div><strong>Das Gebäude wird virtuell erlebbar:</strong><br>
-                Photorealistische Darstellung und Filmvisualisierung als sichere Entscheidungsgrundlage und als Präsentationsmedium.</div>
+                Photorealistische Darstellung und Filmvisualisierung als sichere Entscheidungs&shy;grundlage und als Präsentationsmedium.</div>
             <div><strong>Im Kosten-
                 und Terminmanagement:</strong><br> 
-                Frühe Integration aller Kostenfaktoren in die Entwurfsplanung für ein Optimum an Architekturqualität und Funktionalität im Rahmen der verfügbaren Mittel.</div>
+                Frühe Integration aller Kostenfaktoren in die Entwurfsplanung für ein Optimum an Architektur&shy;qualität und Funktionalität im Rahmen der verfügbaren Mittel.</div>
             <div><strong>Schwerpunkt "Baugeschichtsaufgaben":</strong><br>
                 Umbau und Erweiterung von bestehender Substanz für gegenwärtige Nutzungen und Ansprüche.
-                <br>Freilegung und Restaurierung von historischen Details im Kontext von Modernisierungsmaßnahmen.
+                <br>Freilegung und Restaurierung von historischen Details im Kontext von Modernisierungs&shy;maßnahmen.
                </div>
         </div>
 
         <div class="projectgrid">
-            <div class="project" style="background-image: url(kartaeuserhof/imgs/Kartaeuserhof-teaser.jpg)"> 
-                <a class="projectinfo" href="kartaeuserhof/index.php"></a>
-                <div class="projecttext">2006<br>Kartäuserhof 19<br>Köln</div>
-            </div>
             <div class="project" onclick="" style="background-image: url(ahrweiler/imgs/20-08Ahrweiler-teaser.jpg);">
                 <a class="projectinfo" href="ahrweiler/umbau.php"></a>
                 <div class="projecttext">2020<br>Bad Neuenahr-Ahrweiler</div>
@@ -344,7 +340,11 @@
             <div class="project" onclick="" style="background-image: url(palguin/imgs/06-06-01Chile-teaser.jpg);">
                <a class="projectinfo" href="palguin/index.php"></a>
                <div class="projecttext">2006 - 2007<br>Palguin Alto, Chile</div>
-            </div>            
+            </div>
+            <div class="project" style="background-image: url(kartaeuserhof/imgs/Kartaeuserhof-teaser.jpg)"> 
+               <a class="projectinfo" href="kartaeuserhof/index.php"></a>
+               <div class="projecttext">2006<br>Kartäuserhof 19<br>Köln</div>
+           </div>            
             <div class="project" onclick="" style="background-image: url(manila/imgs/2006-02Manila-teaser.jpg);">
                <a class="projectinfo" href="manila/planung.php"></a>
                <div class="projecttext">2006<br>Manila, Philippinen</div>
