--- a/index.html
+++ b/index.html
@@ -251,6 +251,10 @@
                 <a class="projectinfo" href="bonn-oberkassel/index.php"></a>
                 <div class="projecttext">2019<br>Bonn Oberkassel</div>
             </div>
+            <div class="project" onclick="" style="background-image: url(hoeninger-weg/imgs/2020Hoeninger-teaser.jpg);">
+                <a class="projectinfo" href="hoeninger-weg/index.php"></a>
+                <div class="projecttext">2018-2019<br>Köln Zollstock</div>
+            </div>
             <div class="project" onclick="" style="background-image: url(suedstadt-kindergarten/imgs/2018Kindergarten-teaser.jpg);">
                 <a class="projectinfo" href="suedstadt-kindergarten/vorher.php"></a>
                 <div class="projecttext">2018-2019<br>Köln Südstadt</div>
