--- a/index.html
+++ b/index.html
@@ -252,6 +252,11 @@
                <div class="projecttext">2008-2009<br>Köln Mauenheim
                   Kriemhildplatz</div>
             </div>
+            <div class="project" onclick="" style="background-image: url(engelbert/imgs/04-01Engelbert-teaser.jpg);">
+               <a class="projectinfo" href="engelbert/index.php"></a>
+               <div class="projecttext">2004<br>Engelbertstrasse, Köln
+               </div>
+            </div>
             <div class="project" onclick="" style="background-image: url(kartaeuserhof3/imgs/2014-K19-3-teaser.jpg);">
                <a class="projectinfo" href="kartaeuserhof3/index.php"></a>
                <div class="projecttext">2014<br>Köln Südstadt</div>
@@ -320,10 +325,10 @@
             <div class="project" onclick="" style="background-image: url(porz/imgs/2012Porz-teaser.jpg);">
                <a class="projectinfo" href="porz/index.php"></a>
                <div class="projecttext">2012<br>Köln Porz</div>
-            </div>            
-            <div class="project" onclick="" style="background-image: url(pulheim/imgs/2011Pulheim-teaser.jpg);">
-               <a class="projectinfo" href="pulheim/index.php"></a>
-               <div class="projecttext">2011<br>Pulheim</div>
+            </div>                     
+            <div class="project" onclick="" style="background-image: url(longerich/imgs/2012Longerich-teaser.jpg);">
+               <a class="projectinfo" href="longerich/index.php"></a>
+               <div class="projecttext">2012<br>Köln Longerich</div>
             </div>            
             <div class="project" onclick="" style="background-image: url(bergisch-gladbach/imgs/2011GLT-teaser.jpg);">
                <a class="projectinfo" href="bergisch-gladbach/index.php"></a>
