--- a/index.html
+++ b/index.html
@@ -354,9 +354,23 @@
                <a class="projectinfo" href="kartaeuserhof/index.php"></a>
                <div class="projecttext">2006<br>Kartäuserhof 19<br>Köln</div>
            </div>                       
-            <div class="project" onclick="" style="background-image: url(dünnwald/imgs/2006-01NeubauDünnwald-teaser.jpg);">
-               <a class="projectinfo" href="dünnwald/planung.php"></a>
+            <div class="project" onclick="" style="background-image: url(duennwald/imgs/2006-01NeubauDuennwald-teaser.jpg);">
+               <a class="projectinfo" href="duennwald/planung.php"></a>
                <div class="projecttext">2006<br>Köln Dünnwald</div>
+            </div>            
+            <div class="project" onclick="" style="background-image: url(ehrenfeld/imgs/2005Hinterhofwerkstatt-teaser.jpg);">
+               <a class="projectinfo" href="ehrenfeld/planung.php"></a>
+               <div class="projecttext">2004<br>Köln Ehrenfeld</div>
+            </div>            
+            <div class="project" onclick="" style="background-image: url(tuev/imgs/2004TUEVRheinland-teaser.jpg);">
+               <a class="projectinfo" href="tuev/planung.php"></a>
+               <div class="projecttext">2004<br>Köln 
+                  <br>TÜV Rheinland</div>
+            </div>
+            <div class="project" onclick="" style="background-image: url(sushi-bar/imgs/2004SushiBar-teaser.jpg);">
+               <a class="projectinfo" href="sushi-bar/index.php"></a>
+               <div class="projecttext">2004<br>Sushi Bar 
+                  <br>Köln Südstadt</div>
             </div>            
 
         </div>
