--- a/index.html
+++ b/index.html
@@ -380,6 +380,19 @@
                <div class="projecttext">2004<br>Sushi Bar 
                   <br>Köln Südstadt</div>
             </div>            
+            <div class="project" onclick="" style="background-image: url(moenchengladbach/imgs/2003-Moenchengladbach-teaser.jpg);">
+               <a class="projectinfo" href="moenchengladbach/planung.php"></a>
+               <div class="projecttext">2003<br>Mönchengladbach</div>
+            </div>            
+            <div class="project" onclick="" style="background-image: url(sushi-bar/imgs/2004SushiBar-teaser.jpg);">
+               <a class="projectinfo" href="sushi-bar/index.php"></a>
+               <div class="projecttext">2003<br>Prumbaum</div>
+            </div>            
+            <div class="project" onclick="" style="background-image: url(sushi-bar/imgs/2004SushiBar-teaser.jpg);">
+               <a class="projectinfo" href="sushi-bar/index.php"></a>
+               <div class="projecttext">2003<br>Haus 9</div>
+            </div>            
+                        
 
         </div>
     </main>
